--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
-    />
-    <title>react-telegram-web-app</title>
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"/><title>react-telegram-web-app</title><script src="https://telegram.org/js/telegram-web-app.js"></script><script defer="defer" src="statics/main.8a623932.js"></script><link href="staticss/main.34c647b9.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
